feat: enhance audio processing and refine wish generation tasks
- Add support for audio generation in the Deno tasks with a new 'dev:audio' command
- Implement estimated cost calculation for text-to-speech in textToSpeech.ts
- Introduce new speech generation tasks: generateFirstPersonSpeechTask and generateThirdPersonSpeechTask
- Update existing tasks to improve clarity and structure of generated responses
- Modify genie rules to include new personality types and refine greeting generation

--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
     "tasks": {
         "dev:cli_demo": "export KAIBAN_TELEMETRY_OPT_OUT=true && deno run --allow-read --allow-env --allow-net --allow-write cli_demo.ts",
         "dev:bot": "deno run --allow-net --allow-read --allow-env --allow-import bot.ts",
+        "dev:audio": "deno run --allow-read --allow-env --allow-net --allow-write cli_audio_demo.ts",
         "setup-hooks": "deno run --allow-read --allow-run --allow-write .gitHooks/set-hooks-path.ts"
     },
     "imports": {
